Fixed vertical align stuff

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,10 @@ body {
     position: relative;
     height: 300px;
     padding: 0;
-    margin: 0 0% 0 0%;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .picture > img {
